[package]
name = "esp-jokes-rs"
version = "0.1.0"
authors = ["Jonatan Borkowski <jonatan@thebo.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.8.0", features = ["panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { git = "https://github.com/jborkowski/esp-wifi/", rev = "5d89236", features = ["wifi", "embassy-net", "async"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
heapless = { version = "0.7.14", default-features = false }

embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "889d482", features = ["nightly", "integrated-timers","executor-thread","arch-riscv32"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "889d482", features = ["nightly","tcp","proto-ipv4","medium-ethernet","dhcpv4", "dns", "log", "udp", "medium-ip" ] }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "889d482"}
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "889d482",  features = ["nightly"]}
reqwless = { version = "0.8.0", features = ["alloc", "log"] }

embedded-graphics = "0.8.1"

static_cell = { version = "1.2.0", features = ["nightly"] }
embedded-text = "0.6.6"

# chips
esp32c3-hal = { version = "0.12.0", features=["embassy","async","embassy-time-timg0"], optional = true }
esp32c6-hal = { version = "0.5.0", features=["embassy","async","embassy-time-timg0"], optional = true }

# display drivers
st7735-lcd = {version = "0.9.0", optional = true }
ssd1306 = { version = "0.8.3", optional = true }
display-interface = { version = "0.4.1", optional = true }

[features]
default = ["display-st7735", "esp32c3"]
#default = ["display-ssd1306"]
display-st7735 = ["st7735-lcd"]
display-ssd1306 = ["ssd1306", "display-interface"]

esp32c3 = ["esp32c3-hal", "esp-backtrace/esp32c3", "esp-println/esp32c3", "esp-wifi/esp32c3"]
esp32c6 = ["esp32c6-hal", "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp-wifi/esp32c6"]
